--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
    text-align: center;
    color: #2c3e50;
    margin-bottom: 24px;
-   font-size: 1.5rem;
+   font-size: 2.25rem;
  }
  
  h2{
    margin: 24px 0 12px;
-   font-size: 1.1rem;
+   font-size: 1.65rem;
    color: #34495e;
    font-weight: 600;
  }
@@ -57,7 +57,7 @@
    border-radius: 8px;
    cursor: pointer;
    transition: all 0.2s ease;
-   font-size: 0.95rem;
+   font-size: 1.425rem;
    position: relative;
    box-shadow: 0 1px 3px rgba(0,0,0,0.1);
  }
@@ -104,7 +104,7 @@
    border: 2px solid #e1e8ed;
    border-radius: 8px;
    font-family: inherit;
-   font-size: 0.95rem;
+   font-size: 1.425rem;
    resize: vertical;
    box-sizing: border-box;
    background: white;
@@ -116,7 +116,7 @@
  }
  
  .example-text {
-   font-size: 0.85rem;
+   font-size: 1.275rem;
    color: #7f8c8d;
    margin-bottom: 8px;
    font-style: italic;
@@ -127,7 +127,7 @@
    width: 100%;
    margin-top: 24px;
    padding: 14px 20px;
-   font-size: 1.1rem;
+   font-size: 1.65rem;
    font-weight: 600;
    cursor: pointer;
    border: none;
@@ -157,7 +157,7 @@
  }
  
  #result p {
-   font-size: 1.1rem;
+   font-size: 1.65rem;
    margin-bottom: 20px;
    color: #2c3e50;
  }
@@ -193,7 +193,7 @@
  }
 </style>
 
-<h1>ご来院アンケート</h1>
+<h1>林整形外科クリニック ご来院アンケート</h1>
 
 <!-- ======= ① アンケートフォーム ======= -->
 <div id="formArea">
