--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
    content: " ※必須";
    color: #e74c3c;
    font-weight: bold;
+   font-size: 1.1rem;
  }
  
  /* ラジオボタン・チェックボックスのスタイル */
@@ -174,16 +175,16 @@
    }
    
    h1 {
-     font-size: 1.3rem;
+     font-size: 1.6rem;
    }
    
    h2 {
-     font-size: 1rem;
+     font-size: 1.3rem;
    }
    
    .option-label {
      padding: 14px 12px;
-     font-size: 0.9rem;
+     font-size: 1.1rem;
    }
    
    button {
@@ -193,7 +194,7 @@
  }
 </style>
 
-<h1>林整形外科クリニック ご来院アンケート</h1>
+<h1>林整形外科クリニック<br>ご来院アンケート</h1>
 
 <!-- ======= ① アンケートフォーム ======= -->
 <div id="formArea">
