--- a/index.html
+++ b/index.html
@@ -187,6 +187,10 @@
      font-size: 1.1rem;
    }
    
+   textarea {
+     font-size: 1.1rem;
+   }
+
    button {
      padding: 16px 20px;
      font-size: 1rem;
