--- a/index.html
+++ b/index.html
@@ -386,20 +386,21 @@ qs('#sendBtn').onclick = async () => {
   const comment = qs('#comment').value.trim();
   const name = qs('#name').value.trim();
 
-  /* 送信（結果を待たずUI変更） */
-  fetch(WEBHOOK,{
-  method:'POST',
-  mode:'no-cors', // そのままでOK（レスポンスは読めなくても送信はされます）
-  headers:{'Content-Type':'application/json'}, // ← ここを application/json に
-  body:JSON.stringify({
-    visit_reason: visit,
-    discovery:    disc,
-    choosing_reason: choose,
-    recommend:    reco,
-    comment,
-    name
-  })
+  const body = new URLSearchParams({
+  visit_reason: visit || '',
+  discovery: disc || '',
+  choosing_reason: (Array.isArray(choose) ? choose.join(',') : (choose || '')),
+  recommend: reco || '',
+  comment: comment || '',
+  name: name || ''
 });
+
+fetch(WEBHOOK, {
+  method: 'POST',
+  headers: {'Content-Type': 'application/x-www-form-urlencoded'},
+  body
+});
+
 
 
   /* フォームを隠し、結果エリアを表示 */
