--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 
 <script>
 /* ▼▼▼ 自分用設定 ▼▼▼ */
-const WEBHOOK   = 'https://script.google.com/macros/s/AKfycbw7QWoCjnlFo5OC_c_9YmbFJ0-ijOFLhopoDOP5qbDLLh8ZdlTDJJ9Jkj9C-QZgjRCP/exec';
+const WEBHOOK   = 'https://script.google.com/macros/s/AKfycbxbYAxymiN5wd5JmOhioDk0Md-a49ThoQmRzitlMt8bg9vh7uIiMlJjmKllG2D87XPG/exec';
 const GP_REVIEW = 'https://g.page/r/CewuGlaFy9XYEBM/review';
 const POSITIVE_SAMPLE = '例）腰が痛くなり受診しました。説明もわかりやすく、とても丁寧に診察してくれます。周りにもおすすめできる整形外科です。';
 const NEGATIVE_SAMPLE = '例）受付の対応が残念だった。もう少し待ち時間の説明があったら、もっと良かったと思う。';
@@ -386,22 +386,20 @@ qs('#sendBtn').onclick = async () => {
   const comment = qs('#comment').value.trim();
   const name = qs('#name').value.trim();
 
-  const body = new URLSearchParams({
-  visit_reason: visit || '',
-  discovery: disc || '',
-  choosing_reason: (Array.isArray(choose) ? choose.join(',') : (choose || '')),
-  recommend: reco || '',
-  comment: comment || '',
-  name: name || ''
-});
-
-fetch(WEBHOOK, {
-  method: 'POST',
-  headers: {'Content-Type': 'application/x-www-form-urlencoded'},
-  body
-});
-
-
+  /* 送信（結果を待たずUI変更） */
+  fetch(WEBHOOK,{
+    method:'POST',
+    mode:'no-cors',
+    headers:{'Content-Type':'text/plain'},
+    body:JSON.stringify({
+      visit_reason:visit,
+      discovery:disc,
+      choosing_reason:choose,
+      recommend:reco,
+      comment,
+      name
+    })
+  });
 
   /* フォームを隠し、結果エリアを表示 */
   qs('#formArea').style.display='none';
